// 客户端消息
syntax = "proto3"; // 指定protobuf协议版本信息
option go_package = "./;pb"; // 指定go文件包名

message ClientMsg {
    ClientActionType action = 1; // 动作类型
    oneof Data {
        LoginMsgData login_msg_data = 2; // 登录消息
        RegisterMsgData register_msg_data = 3; // 注册消息
        string logout_user_id = 4; // 登出用户id
    }
}

message LoginMsgData {
    string UserAccount = 1;
    string UserPwd = 2;
}

message RegisterMsgData {
    string UserAccount = 1;
    string UserPwd = 2;
    string NickName = 3;
    string Email = 4;
}

enum ClientActionType {
    LOGIN = 0;
    REGISTER = 1;
    LOGOUT = 2;
}